chore(): updated package dependencies to be only what is needed.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "private": true,
   "scripts": {},
   "devDependencies": {
+    "@types/form-data": "0.0.33",
+    "@types/xml2js": "0.0.32",
+    "@types/archiver": "^0.15.36",
     "@types/chalk": "^0.4.30",
     "@types/diff": "0.0.31",
-    "@types/form-data": "0.0.33",
     "@types/inquirer": "0.0.31",
     "@types/jest": "^16.0.1",
     "@types/lodash": "^4.14.38",
@@ -15,6 +17,7 @@
     "@types/path-exists": "^1.0.29",
     "@types/semver": "^5.3.30",
     "@types/tar": "^1.0.28",
+    "@types/ncp": "^2.0.0",
     "concurrently": "^3.1.0",
     "conventional-changelog-cli": "1.1.1",
     "coveralls": "^2.2.0",
