--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -37,12 +37,6 @@
     "url": "https://github.com/driftyco/ionic-cli/issues"
   },
   "license": "MIT",
-  "devDependencies": {
-    "@ionic/cli-utils": "^0.0.1",
-    "@types/form-data": "0.0.33",
-    "@types/xml2js": "0.0.32",
-    "chalk": "^1.1.3"
-  },
   "jest": {
     "moduleFileExtensions": [
       "ts",
@@ -55,6 +49,7 @@
   },
   "dependencies": {
     "@ionic/cli-utils": "^0.0.1",
+    "chalk": "^1.1.3",
     "form-data": "^2.1.2",
     "node-fetch": "^1.6.3",
     "xml2js": "^0.4.17"
