--- a/packages/cli-plugin-core/package.json
+++ b/packages/cli-plugin-core/package.json
@@ -36,11 +36,6 @@
     "url": "https://github.com/driftyco/ionic-cli/issues"
   },
   "license": "MIT",
-  "devDependencies": {
-    "@ionic/cli-utils": "^0.0.1",
-    "@types/archiver": "^0.15.36",
-    "chalk": "^1.1.3"
-  },
   "jest": {
     "moduleFileExtensions": [
       "ts",
@@ -53,7 +48,10 @@
   },
   "dependencies": {
     "@ionic/app-generators": "0.0.4",
+    "@ionic/cli-utils": "^0.0.1",
     "archiver": "^1.3.0",
-    "opn": "^4.0.2"
+    "chalk": "^1.1.3",
+    "opn": "^4.0.2",
+    "superagent": "^3.4.1"
   }
 }
