--- a/packages/cli-plugin-package/package.json
+++ b/packages/cli-plugin-package/package.json
@@ -36,9 +36,9 @@
     "url": "https://github.com/driftyco/ionic-cli/issues"
   },
   "license": "MIT",
-  "devDependencies": {
-    "chalk": "^1.1.3",
-    "@ionic/cli-utils": "^0.0.1"
+  "dependencies": {
+    "@ionic/cli-utils": "^0.0.1",
+    "chalk": "^1.1.3"
   },
   "jest": {
     "moduleFileExtensions": ["ts", "js"],
