--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -36,14 +36,12 @@
     "url": "https://github.com/driftyco/ionic-cli/issues"
   },
   "license": "MIT",
-  "devDependencies": {
-    "@types/ncp": "^2.0.0",
+  "dependencies": {
     "chalk": "^1.1.3",
     "cross-spawn": "^4.0.2",
     "inquirer": "^1.2.2",
-    "lodash-es": "^4.16.6",
     "minimist": "^1.2.0",
-    "opn": "^4.0.2",
+    "ncp": "^2.0.0",
     "os-name": "^2.0.1",
     "superagent": "^2.3.0"
   },
@@ -56,8 +54,5 @@
       "^.+\\.(ts)$": "<rootDir>/preprocessor.js"
     },
     "testRegex": "/__tests__/.*\\.(ts|js)$"
-  },
-  "dependencies": {
-    "ncp": "^2.0.0"
   }
 }
