--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -41,15 +41,13 @@
     "url": "https://github.com/driftyco/ionic-cli/issues"
   },
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "@ionic/cli-utils": "^0.0.1",
     "chalk": "^1.1.3",
-    "cross-spawn": "^4.0.2",
     "minimist": "^1.2.0",
     "node-fetch": "^1.6.3",
     "opn": "^4.0.2",
     "path-exists": "^3.0.0",
-    "semver": "^5.3.0",
     "tar": "^2.2.1"
   },
   "jest": {
