--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node-fetch": "^1.6.6",
     "@types/opn": "^3.0.28",
     "@types/path-exists": "^1.0.29",
+    "@types/progress": "^1.1.28",
     "@types/semver": "^5.3.30",
     "@types/tar": "^1.0.28",
     "@types/ncp": "^2.0.0",
