--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -43,6 +43,7 @@
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
     "os-name": "^2.0.1",
+    "progress": "^1.1.8",
     "superagent": "^2.3.0"
   },
   "jest": {
