--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "@ionic/cli-utils": "^0.0.1",
     "chalk": "^1.1.3",
+    "inquirer": "^3.0.1",
     "minimist": "^1.2.0",
     "node-fetch": "^1.6.3",
     "opn": "^4.0.2",
@@ -51,7 +52,10 @@
     "tar": "^2.2.1"
   },
   "jest": {
-    "moduleFileExtensions": ["ts", "js"],
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
     "transform": {
       "^.+\\.(ts)$": "<rootDir>/preprocessor.js"
     },
