feat(): integrate appscripts into core.

--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -53,5 +53,8 @@
     "form-data": "^2.1.2",
     "node-fetch": "^1.6.3",
     "xml2js": "^0.4.17"
+  },
+  "peerDependencies": {
+    "@ionic/app-scripts": "^1.0.0"
   }
 }
