--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "private": true,
   "scripts": {},
   "devDependencies": {
+    "@ionic/app-scripts": "^1.0.0",
     "@types/archiver": "^0.15.36",
     "@types/chalk": "^0.4.30",
+    "@types/clean-css": "^3.4.30",
     "@types/diff": "0.0.31",
     "@types/form-data": "0.0.33",
     "@types/inquirer": "0.0.31",
