--- a/packages/cli-plugin-package/package.json
+++ b/packages/cli-plugin-package/package.json
@@ -40,6 +40,9 @@
     "@ionic/cli-utils": "^0.0.1",
     "chalk": "^1.1.3"
   },
+  "files": [
+    "dist/"
+  ],
   "jest": {
     "moduleFileExtensions": ["ts", "js"],
     "transform": {
