--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/progress": "^1.1.28",
     "@types/semver": "^5.3.30",
     "@types/tar": "^1.0.28",
+    "@types/uuid": "^2.0.29",
     "@types/xml2js": "0.0.32",
     "concurrently": "^3.1.0",
     "conventional-changelog-cli": "1.1.1",
