--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -40,12 +40,14 @@
     "chalk": "^1.1.3",
     "cross-spawn": "^4.0.2",
     "inquirer": "^1.2.2",
+    "leek": "0.0.24",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
     "os-name": "^2.0.1",
     "progress": "^1.1.8",
     "rimraf": "^2.5.4",
-    "superagent": "^2.3.0"
+    "superagent": "^2.3.0",
+    "uuid": "^3.0.1"
   },
   "files": [
     "dist/"
