--- a/package.json
+++ b/package.json
@@ -17,22 +17,22 @@
     "@types/opn": "^3.0.28",
     "@types/path-exists": "^1.0.29",
     "@types/progress": "^1.1.28",
+    "@types/rimraf": "0.0.28",
     "@types/semver": "^5.3.30",
     "@types/tar": "^1.0.28",
     "@types/uuid": "^2.0.29",
     "@types/xml2js": "0.0.32",
+    "awesome-typescript-loader": "^3.0.4",
     "concurrently": "^3.1.0",
     "conventional-changelog-cli": "1.1.1",
     "coveralls": "^2.2.0",
     "eslint-config-ionic": "0.0.2",
     "jest-cli": "^17.0.3",
+    "json-loader": "^0.5.4",
     "lerna": "2.0.0-beta.37",
-    "rollup": "^0.36.1",
-    "rollup-plugin-commonjs": "^5.0.4",
-    "rollup-plugin-json": "^2.0.2",
-    "rollup-plugin-node-resolve": "^2.0.0",
     "tslint": "^4.0.0-dev.0",
     "tslint-ionic-rules": "^0.0.8",
-    "typescript": "^2.1.4"
+    "typescript": "^2.1.4",
+    "webpack": "^2.2.1"
   }
 }
