--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -8,7 +8,7 @@
   "types": "./dist/main.d.ts",
   "scripts": {
     "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
-    "build": "npm run lint && npm run clean && ../../node_modules/.bin/tsc",
+    "build": "npm run lint && npm run clean && ../../node_modules/.bin/webpack",
     "clean": "rm -rf ./dist",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
     "test": "../../node_modules/.bin/jest",
@@ -49,9 +49,11 @@
   },
   "dependencies": {
     "@ionic/cli-utils": "^0.0.4",
+    "node-fetch": "^1.6.3"
+  },
+  "devDependencies": {
     "chalk": "^1.1.3",
     "form-data": "^2.1.2",
-    "node-fetch": "^1.6.3",
     "xml2js": "^0.4.17"
   },
   "peerDependencies": {
