--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -8,7 +8,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
-    "build": "npm run lint && npm run clean && ../../node_modules/.bin/tsc",
+    "build": "npm run lint && npm run clean && ../../node_modules/.bin/webpack",
     "clean": "rm -rf ./dist",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
     "test": "../../node_modules/.bin/jest",
@@ -37,16 +37,18 @@
   },
   "license": "MIT",
   "dependencies": {
-    "chalk": "^1.1.3",
     "cross-spawn": "^4.0.2",
     "inquirer": "^1.2.2",
-    "leek": "0.0.24",
+    "superagent": "^2.3.0",
+    "leek": "0.0.24"
+  },
+  "devDependencies": {
+    "chalk": "^1.1.3",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
     "os-name": "^2.0.1",
     "progress": "^1.1.8",
     "rimraf": "^2.5.4",
-    "superagent": "^2.3.0",
     "uuid": "^3.0.1"
   },
   "files": [
@@ -61,8 +63,5 @@
       "^.+\\.(ts)$": "<rootDir>/preprocessor.js"
     },
     "testRegex": "/__tests__/.*\\.(ts|js)$"
-  },
-  "devDependencies": {
-    "@types/rimraf": "0.0.28"
   }
 }
