--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -45,15 +45,17 @@
     "url": "https://github.com/driftyco/ionic-cli/issues"
   },
   "license": "MIT",
-  "dependencies": {
-    "@ionic/cli-utils": "^0.0.4",
+  "devDependencies": {
     "chalk": "^1.1.3",
-    "inquirer": "^3.0.1",
     "minimist": "^1.2.0",
-    "node-fetch": "^1.6.3",
     "opn": "^4.0.2",
     "path-exists": "^3.0.0",
     "tar": "^2.2.1"
+  },
+  "dependencies": {
+    "@ionic/cli-utils": "^0.0.4",
+    "inquirer": "^3.0.1",
+    "node-fetch": "^1.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
