--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -14,7 +14,7 @@
   "main": "./dist/ionic.js",
   "typings": "./dist/ionic.d.ts",
   "scripts": {
-    "build": "npm run lint && npm run clean && ../../node_modules/.bin/concurrently -p '[{name}]' -n 'src' '../../node_modules/.bin/tsc'",
+    "build": "npm run lint && npm run clean && ../../node_modules/.bin/concurrently -p '[{name}]' -n 'src' '../../node_modules/.bin/webpack'",
     "clean": "rm -rf ./dist",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
     "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
