--- a/packages/cli-plugin-ionic1/package.json
+++ b/packages/cli-plugin-ionic1/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@ionic/cli-utils",
-  "version": "0.0.5",
-  "description": "Ionic CLI Utils",
+  "name": "@ionic/cli-plugin-ionic1",
+  "version": "0.0.1",
+  "description": "Ionic 1 plugin",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
-  "main": "./dist/index.js",
-  "types": "./dist/src/index.d.ts",
+  "main": "./src/index.js",
   "scripts": {
     "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
     "build": "npm run lint && npm run clean && ../../node_modules/.bin/webpack",
@@ -36,24 +35,6 @@
     "url": "https://github.com/driftyco/ionic-cli/issues"
   },
   "license": "MIT",
-  "dependencies": {
-    "cross-spawn": "^4.0.2",
-    "inquirer": "^1.2.2",
-    "superagent": "^2.3.0",
-    "leek": "0.0.24"
-  },
-  "devDependencies": {
-    "chalk": "^1.1.3",
-    "minimist": "^1.2.0",
-    "ncp": "^2.0.0",
-    "os-name": "^2.0.1",
-    "progress": "^1.1.8",
-    "rimraf": "^2.5.4",
-    "uuid": "^3.0.1"
-  },
-  "files": [
-    "dist/"
-  ],
   "jest": {
     "moduleFileExtensions": [
       "ts",
@@ -63,5 +44,30 @@
       "^.+\\.(ts)$": "<rootDir>/preprocessor.js"
     },
     "testRegex": "/__tests__/.*\\.(ts|js)$"
+  },
+  "dependencies": {
+    "@ionic/app-generators": "0.0.3",
+    "chalk": "^1.1.3",
+    "cli-table": "0.3.1",
+    "cross-spawn": "^5.0.1",
+    "expand-tilde": "1.2.0",
+    "form-data": "0.1.4",
+    "gulp": "3.8.8",
+    "gulp-util": "3.0.7",
+    "inquirer": "0.11.2",
+    "ionic-app-lib": "2.2.0",
+    "moment": "2.11.1",
+    "open": "0.0.5",
+    "optimist": "0.6.0",
+    "pretty-hrtime": "1.0.2",
+    "progress": "1.1.7",
+    "prompt": "0.2.12",
+    "q": "1.0.1",
+    "request": "2.74.0",
+    "semver": "4.3.6",
+    "serve-static": "1.7.1",
+    "shelljs": "0.2.6",
+    "underscore": "1.7.0",
+    "unzip": "0.1.9"
   }
 }
