--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ionic",
-  "version": "3.0.0-alpha.107",
+  "version": "3.0.0-beta.1",
   "preferGlobal": true,
   "description": "A tool for creating and developing Ionic Framework mobile apps.",
   "homepage": "http://ionicframework.com/",
