--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@types/xml2js": "0.0.32",
     "awesome-typescript-loader": "^3.0.4",
     "concurrently": "^3.1.0",
-    "conventional-changelog-cli": "1.1.1",
     "coveralls": "^2.2.0",
+    "cz-lerna-changelog": "^1.2.0",
     "eslint-config-ionic": "0.0.2",
     "jest-cli": "^17.0.3",
     "json-loader": "^0.5.4",
