--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "build": "npm run lint && npm run clean && ../../node_modules/.bin/concurrently -p '[{name}]' -n 'src' '../../node_modules/.bin/webpack'",
     "clean": "rm -rf ./dist",
-    "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
+    "changelog": "../../node_modules/.bin/conventional-changelog -i CHANGELOG.md -s -p angular",
     "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
     "test": "../../node_modules/.bin/jest",
     "globallink": "npm link",
