--- a/packages/cli-build-angular1/package.json
+++ b/packages/cli-build-angular1/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ionic/cli-build-app-scripts",
+  "name": "@ionic/cli-build-angular1",
   "version": "0.0.1",
-  "description": "Ionic App-Scripts build plugin",
+  "description": "Ionic 1 build plugin",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
   "main": "./dist/index.js",
@@ -30,19 +30,20 @@
       "^.+\\.(ts)$": "<rootDir>/preprocessor.js"
     },
     "testRegex": "/__tests__/.*\\.(ts|js)$",
-    "rootDir": "/Users/joshthomas/Workspace/ionic-cli/packages/cli-plugin-app-scripts",
-    "name": "-Users-joshthomas-Workspace-ionic-cli-packages-cli-plugin-app-scripts",
+    "rootDir": "/Users/joshthomas/Workspace/ionic-cli/packages/cli-build-ionic1",
+    "name": "-Users-joshthomas-Workspace-ionic-cli-packages-cli-build-ionic1",
     "setupFiles": [],
     "testRunner": "/Users/joshthomas/Workspace/ionic-cli/node_modules/jest-jasmine2/build/index.js"
   },
   "dependencies": {
-    "chalk": "^1.1.3"
+    "chalk": "^1.1.3",
+    "express": "^4.14.1",
+    "proxy-middleware": "^0.15.0",
+    "tiny-lr": "^1.0.3"
   },
   "devDependencies": {
-    "@ionic/cli-utils": "^0.0.7"
-  },
-  "peerDependencies": {
-    "@ionic/app-scripts": "^1.1.0"
+    "@ionic/cli-utils": "^0.0.7",
+    "@types/express": "^4.0.35"
   },
   "cordovaPlugins": [],
   "cordovaPlatforms": []
