--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/chalk": "^0.4.30",
     "@types/clean-css": "^3.4.30",
     "@types/diff": "0.0.31",
+    "@types/express": "^4.0.35",
     "@types/form-data": "0.0.33",
     "@types/inquirer": "0.0.31",
     "@types/jest": "^16.0.1",
