--- a/packages/cli-build-angular1/package.json
+++ b/packages/cli-build-angular1/package.json
@@ -7,7 +7,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
-    "build": "npm run lint && npm run clean && ../../node_modules/.bin/webpack",
+    "build": "npm run lint && npm run clean && ../../node_modules/.bin/tsc",
     "clean": "rm -rf ./dist",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
     "test": "../../node_modules/.bin/jest",
@@ -38,13 +38,11 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "express": "^4.14.1",
+    "glob-watcher": "^3.1.0",
     "proxy-middleware": "^0.15.0",
     "tiny-lr": "^1.0.3"
   },
   "devDependencies": {
-    "@ionic/cli-utils": "^0.0.7",
-    "@types/express": "^4.0.35"
-  },
-  "cordovaPlugins": [],
-  "cordovaPlatforms": []
+    "@ionic/cli-utils": "^0.0.7"
+  }
 }
