--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -46,6 +46,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@ionic/app-generators": "0.0.4",
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
     "opn": "^4.0.2",
