--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -55,8 +55,10 @@
   },
   "dependencies": {
     "@ionic/cli-utils": "^0.0.7",
+    "archiver": "^1.3.0",
     "inquirer": "^3.0.1",
-    "node-fetch": "^1.6.3"
+    "node-fetch": "^1.6.3",
+    "superagent": "^2.3.0"
   },
   "jest": {
     "moduleFileExtensions": [
