--- a/packages/cli-build-ionic1/package.json
+++ b/packages/cli-build-ionic1/package.json
@@ -39,6 +39,7 @@
     "chalk": "^1.1.3",
     "express": "^4.14.1",
     "glob-watcher": "^3.1.0",
+    "opn": "^4.0.2",
     "proxy-middleware": "^0.15.0",
     "tiny-lr": "^1.0.3"
   },
