--- a/packages/cli-build-ionic1/package.json
+++ b/packages/cli-build-ionic1/package.json
@@ -41,7 +41,8 @@
     "glob-watcher": "^3.1.0",
     "opn": "^4.0.2",
     "proxy-middleware": "^0.15.0",
-    "tiny-lr": "^1.0.3"
+    "tiny-lr": "^1.0.3",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "@ionic/cli-utils": "^0.0.8"
