--- a/packages/cli-plugin-package/package.json
+++ b/packages/cli-plugin-package/package.json
@@ -8,7 +8,7 @@
   "types": "./dist/main.d.ts",
   "scripts": {
     "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
-    "build": "npm run lint && npm run clean && ../../node_modules/.bin/tsc",
+    "build": "npm run lint && npm run clean && ../../node_modules/.bin/webpack",
     "clean": "rm -rf ./dist",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
     "test": "../../node_modules/.bin/jest",
