--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -12,7 +12,7 @@
     "node": ">=6"
   },
   "main": "./dist/ionic.js",
-  "typings": "./dist/ionic.d.ts",
+  "typings": "./dist/src/index.d.ts",
   "scripts": {
     "build": "npm run lint && npm run clean && ../../node_modules/.bin/webpack",
     "clean": "rm -rf ./dist",
