--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -56,6 +56,7 @@
     "archiver": "^1.3.0",
     "inquirer": "^3.0.1",
     "node-fetch": "^1.6.3",
+    "qrcode-terminal": "^0.11.0",
     "superagent": "^2.3.0"
   },
   "jest": {
