--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -37,6 +37,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "archiver": "^1.3.0",
     "cross-spawn": "^4.0.2",
     "inquirer": "^1.2.2",
     "superagent": "^2.3.0",
