chore(ci): run lerna in ci

--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,12 @@
 machine:
   node:
     version: v6.1.0
+
+dependencies:
+  post:
+    - ./node_modules/.bin/lerna run lint
+    - ./node_modules/.bin/lerna run build
+
+test:
+  override:
+    - ./node_modules/.bin/lerna run test
