--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,7 @@ machine:
 
 dependencies:
   post:
+    - cd packages/cli-utils && npm install
     - ./node_modules/.bin/lerna bootstrap
     - ./node_modules/.bin/lerna run lint
     - ./node_modules/.bin/lerna run build
