chore(ci): also, actually build cli-utils would be nice

--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ machine:
 
 dependencies:
   post:
-    - cd packages/cli-utils && npm install
+    - cd packages/cli-utils && npm install && npm run build
     - ./node_modules/.bin/lerna bootstrap
     - ./node_modules/.bin/lerna run lint
     - ./node_modules/.bin/lerna run build
