chore(ci): lint and build before tests

--- a/circle.yml
+++ b/circle.yml
@@ -6,9 +6,10 @@ dependencies:
   post:
     - cd packages/cli-utils && npm install && npm run build
     - ./node_modules/.bin/lerna bootstrap
-    - ./node_modules/.bin/lerna run lint
-    - ./node_modules/.bin/lerna run build
 
 test:
+  pre:
+    - ./node_modules/.bin/lerna run lint
+    - ./node_modules/.bin/lerna run build
   override:
     - ./node_modules/.bin/lerna run test
