--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest-cli": "^17.0.3",
     "json-loader": "^0.5.4",
     "lerna": "2.0.0-beta.38",
+    "ts-jest": "^19.0.2",
     "tslint": "^4.0.0-dev.0",
     "tslint-ionic-rules": "^0.0.8",
     "typescript": "^2.2.1",
