--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -53,10 +53,8 @@
   },
   "dependencies": {
     "@ionic/cli-utils": "^0.0.8",
-    "inquirer": "^3.0.1",
     "node-fetch": "^1.6.3",
-    "qrcode-terminal": "^0.11.0",
-    "superagent": "^2.3.0"
+    "qrcode-terminal": "^0.11.0"
   },
   "jest": {
     "moduleFileExtensions": [
