--- a/packages/cli-build-ionic-angular/package.json
+++ b/packages/cli-build-ionic-angular/package.json
@@ -30,11 +30,8 @@
       ".(ts)": "<rootDir>/../../node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "/__tests__/.*\\.(ts|js)$",
-    "rootDir": "/Users/joshthomas/Workspace/ionic-cli/packages/cli-plugin-app-scripts",
-    "name": "-Users-joshthomas-Workspace-ionic-cli-packages-cli-plugin-app-scripts",
     "setupFiles": [],
-    "testResultsProcessor": "<rootDir>/../../node_modules/ts-jest/coverageprocessor.js",
-    "testRunner": "/Users/joshthomas/Workspace/ionic-cli/node_modules/jest-jasmine2/build/index.js"
+    "testResultsProcessor": "<rootDir>/../../node_modules/ts-jest/coverageprocessor.js"
   },
   "dependencies": {
     "chalk": "^1.1.3"
