chore(ci): install peer dep of ionic-angular plugin

--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,7 @@ machine:
 dependencies:
   post:
     - cd packages/cli-utils && npm install && npm run build
+    - cd packages/cli-build-ionic-angular && npm install @ionic/app-scripts
     - ./node_modules/.bin/lerna bootstrap
 
 test:
