chore(): build plugins now cli-plugin-*, event emitter, registerEvents

--- a/packages/cli-plugin-ionic1/package.json
+++ b/packages/cli-plugin-ionic1/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ionic/cli-build-ionic1",
+  "name": "@ionic/cli-plugin-ionic1",
   "version": "0.0.3",
-  "description": "Ionic CLI build plugin for Ionic1 projects",
+  "description": "Ionic CLI build plugin for Ionic 1 projects",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
   "main": "./dist/index.js",
