--- a/packages/cli-build-ionic-angular/package.json
+++ b/packages/cli-build-ionic-angular/package.json
@@ -37,7 +37,9 @@
     "@ionic/cli-utils": "^0.0.8"
   },
   "devDependencies": {
-    "chalk": "^1.1.3"
+    "@types/semver": "^5.3.31",
+    "chalk": "^1.1.3",
+    "semver": "^5.3.0"
   },
   "peerDependencies": {
     "@ionic/app-scripts": "^1.2.2"
