--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "private": true,
   "scripts": {},
   "devDependencies": {
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "rxjs": "^5.2.0",
     "@ionic/app-scripts": "^1.2.2",
     "@types/archiver": "^0.15.36",
     "@types/chalk": "^0.4.30",
