--- a/packages/cli-plugin-ionic-angular/package.json
+++ b/packages/cli-plugin-ionic-angular/package.json
@@ -37,12 +37,12 @@
     "testResultsProcessor": "<rootDir>/../../node_modules/ts-jest/coverageprocessor.js"
   },
   "dependencies": {
-    "@ionic/cli-utils": "^0.0.9"
-  },
-  "devDependencies": {
-    "@types/semver": "^5.3.31",
+    "@ionic/cli-utils": "^0.0.9",
     "chalk": "^1.1.3",
     "semver": "^5.3.0"
+  },
+  "devDependencies": {
+    "@types/semver": "^5.3.31"
   },
   "peerDependencies": {
     "@ionic/app-scripts": "^1.2.2"
