--- a/packages/cli-plugin-ionic1/package.json
+++ b/packages/cli-plugin-ionic1/package.json
@@ -37,6 +37,7 @@
     "testResultsProcessor": "<rootDir>/../../node_modules/ts-jest/coverageprocessor.js"
   },
   "dependencies": {
+    "@ionic/cli-utils": "^0.0.9",
     "chalk": "^1.1.3",
     "express": "^4.14.1",
     "glob-watcher": "^3.1.0",
@@ -44,8 +45,5 @@
     "proxy-middleware": "^0.15.0",
     "tiny-lr": "^1.0.3",
     "xml2js": "^0.4.17"
-  },
-  "devDependencies": {
-    "@ionic/cli-utils": "^0.0.9"
   }
 }
