--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -44,17 +44,15 @@
     "url": "https://github.com/driftyco/ionic-cli/issues"
   },
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
+    "@ionic/cli-utils": "^0.0.9",
+    "node-fetch": "^1.6.3",
+    "qrcode-terminal": "^0.11.0",
     "chalk": "^1.1.3",
     "minimist": "^1.2.0",
     "opn": "^4.0.2",
     "path-exists": "^3.0.0",
     "tar": "^2.2.1"
-  },
-  "dependencies": {
-    "@ionic/cli-utils": "^0.0.9",
-    "node-fetch": "^1.6.3",
-    "qrcode-terminal": "^0.11.0"
   },
   "jest": {
     "moduleFileExtensions": [
