--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -56,9 +56,18 @@
   },
   "dependencies": {
     "@ionic/cli-utils": "^0.0.9",
-    "node-fetch": "^1.6.3"
+    "chalk": "^1.1.3",
+    "form-data": "^2.1.2",
+    "inquirer": "^3.0.6",
+    "node-fetch": "^1.6.3",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
+    "@types/chalk": "^0.4.31",
+    "@types/form-data": "0.0.33",
+    "@types/inquirer": "0.0.32",
+    "@types/node-fetch": "^1.6.7",
+    "@types/xml2js": "0.0.33",
     "chalk": "^1.1.3",
     "form-data": "^2.1.2",
     "xml2js": "^0.4.17"
