--- a/packages/cli-plugin-ionic-angular/package.json
+++ b/packages/cli-plugin-ionic-angular/package.json
@@ -39,9 +39,12 @@
   "dependencies": {
     "@ionic/cli-utils": "^0.0.9",
     "chalk": "^1.1.3",
+    "inquirer": "^3.0.6",
     "semver": "^5.3.0"
   },
   "devDependencies": {
+    "@types/chalk": "^0.4.31",
+    "@types/inquirer": "0.0.32",
     "@types/semver": "^5.3.31"
   },
   "peerDependencies": {
