--- a/packages/cli-plugin-ionic-angular/tsconfig.json
+++ b/packages/cli-plugin-ionic-angular/tsconfig.json
@@ -18,7 +18,8 @@
     ]
   },
   "include": [
-    "../../types/index.d.ts",
+    "../../types/cross-spawn.d.ts",
+    "../../types/superagent.d.ts",
     "src/**/*.ts"
   ],
   "exclude": [
