--- a/packages/cli-plugin-ionic1/tsconfig.json
+++ b/packages/cli-plugin-ionic1/tsconfig.json
@@ -18,7 +18,11 @@
     ]
   },
   "include": [
-    "../../types/index.d.ts",
+    "../../types/proxy-middleware.d.ts",
+    "../../types/glob-watcher.d.ts",
+    "../../types/tiny-lr.d.ts",
+    "../../types/cross-spawn.d.ts",
+    "../../types/superagent.d.ts",
     "src/**/*.ts"
   ],
   "exclude": [
