--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -38,16 +38,16 @@
   "license": "MIT",
   "dependencies": {
     "archiver": "^1.3.0",
+    "chalk": "^1.1.3",
     "cross-spawn": "^4.0.2",
     "inquirer": "^1.2.2",
-    "superagent": "^2.3.0",
     "leek": "0.0.24",
-    "chalk": "^1.1.3",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
     "os-name": "^2.0.1",
     "progress": "^1.1.8",
     "rimraf": "^2.5.4",
+    "superagent": "^2.3.0",
     "uuid": "^3.0.1"
   },
   "files": [
@@ -63,5 +63,16 @@
     },
     "testRegex": "/__tests__/.*\\.(ts|js)$",
     "testResultsProcessor": "<rootDir>/../../node_modules/ts-jest/coverageprocessor.js"
+  },
+  "devDependencies": {
+    "@types/archiver": "^0.15.37",
+    "@types/chalk": "^0.4.31",
+    "@types/inquirer": "0.0.32",
+    "@types/lodash": "^4.14.58",
+    "@types/minimist": "^1.2.0",
+    "@types/ncp": "^2.0.0",
+    "@types/progress": "^1.1.28",
+    "@types/rimraf": "0.0.28",
+    "@types/uuid": "^2.0.29"
   }
 }
