--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -46,13 +46,23 @@
   "license": "MIT",
   "dependencies": {
     "@ionic/cli-utils": "^0.0.9",
-    "node-fetch": "^1.6.3",
-    "qrcode-terminal": "^0.11.0",
     "chalk": "^1.1.3",
+    "inquirer": "^3.0.6",
     "minimist": "^1.2.0",
+    "node-fetch": "^1.6.3",
     "opn": "^4.0.2",
     "path-exists": "^3.0.0",
+    "qrcode-terminal": "^0.11.0",
     "tar": "^2.2.1"
+  },
+  "devDependencies": {
+    "@types/chalk": "^0.4.31",
+    "@types/inquirer": "0.0.32",
+    "@types/minimist": "^1.2.0",
+    "@types/node-fetch": "^1.6.7",
+    "@types/opn": "^3.0.28",
+    "@types/path-exists": "^1.0.29",
+    "@types/tar": "^1.0.29"
   },
   "jest": {
     "moduleFileExtensions": [
