chore(): re-enabled strict null checks

--- a/packages/cli-utils/tsconfig.json
+++ b/packages/cli-utils/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "target": "es6",
     "typeRoots": [
       "../../node_modules/@types"
