--- a/packages/cli-plugin-ionic1/tsconfig.json
+++ b/packages/cli-plugin-ionic1/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "target": "es6",
     "lib": [
       "es2017.object",
