--- a/packages/cli-plugin-ionic1/tsconfig.json
+++ b/packages/cli-plugin-ionic1/tsconfig.json
@@ -18,6 +18,7 @@
     ]
   },
   "include": [
+    "../../types/archiver.d.ts",
     "../../types/proxy-middleware.d.ts",
     "../../types/glob-watcher.d.ts",
     "../../types/tiny-lr.d.ts",
