--- a/packages/cli-utils/tsconfig.json
+++ b/packages/cli-utils/tsconfig.json
@@ -21,6 +21,7 @@
     ]
   },
   "include": [
+    "../../types/archiver.d.ts",
     "../../types/cross-spawn.d.ts",
     "../../types/superagent.d.ts",
     "../../types/leek.d.ts",
