--- a/packages/ionic/tsconfig.json
+++ b/packages/ionic/tsconfig.json
@@ -16,6 +16,7 @@
     ]
   },
   "include": [
+    "../../types/archiver.d.ts",
     "../../types/cross-spawn.d.ts",
     "../../types/superagent.d.ts",
     "../../types/qrcode-terminal.d.ts",
