chore(): make sure to include resources.json

--- a/packages/cli-plugin-cordova/package.json
+++ b/packages/cli-plugin-cordova/package.json
@@ -8,8 +8,8 @@
   "types": "./dist/main.d.ts",
   "scripts": {
     "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
-    "build": "npm run clean && ../../node_modules/.bin/tsc",
-    "clean": "rm -rf ./dist",
+    "build": "npm run clean && cp ./resources.json ./dist/resources.json && ../../node_modules/.bin/tsc",
+    "clean": "rm -rf ./dist && mkdir ./dist",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
     "test": "../../node_modules/.bin/jest",
     "watch": "npm run clean && ../../node_modules/.bin/tsc --watch",
