--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "awesome-typescript-loader": "^3.1.2",
     "coveralls": "^2.2.0",
     "eslint-config-ionic": "0.0.2",
-    "jest-cli": "^17.0.3",
+    "jest": "^19.0.2",
+    "jest-cli": "^19.0.2",
     "lerna": "2.0.0-beta.38",
-    "ts-jest": "^19.0.2",
+    "ts-jest": "^19.0.7",
     "tslint": "^4.0.0-dev.0",
     "tslint-ionic-rules": "^0.0.8",
     "typescript": "^2.2.1"
