chore(proxy): @ionic/cli-plugin-proxy created

--- a/packages/ionic/tsconfig.json
+++ b/packages/ionic/tsconfig.json
@@ -20,6 +20,8 @@
     "../../types/cross-spawn.d.ts",
     "../../types/superagent.d.ts",
     "../../types/qrcode-terminal.d.ts",
+    "../../types/leek.d.ts",
+    "../../types/os-name.d.ts",
     "src/**/*.ts"
   ],
   "exclude": [
