--- a/packages/cli-plugin-cordova/tsconfig.json
+++ b/packages/cli-plugin-cordova/tsconfig.json
@@ -21,6 +21,8 @@
     "../../types/archiver.d.ts",
     "../../types/cross-spawn.d.ts",
     "../../types/superagent.d.ts",
+    "../../types/leek.d.ts",
+    "../../types/os-name.d.ts",
     "src/**/*.ts"
   ],
   "exclude": [
