--- a/packages/cli-plugin-proxy/package.json
+++ b/packages/cli-plugin-proxy/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "@ionic/cli-utils",
-  "version": "0.0.9",
-  "description": "Ionic CLI Utils",
+  "name": "@ionic/cli-plugin-proxy",
+  "version": "0.0.1",
+  "description": "Ionic CLI plugin for proxying all CLI HTTP requests",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
   "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/main.d.ts",
   "scripts": {
     "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
     "build": "npm run clean && ../../node_modules/.bin/tsc",
     "clean": "rm -rf ./dist",
-    "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
-    "test": "../../node_modules/.bin/jest",
-    "watch": "npm run clean && ../../node_modules/.bin/tsc --watch"
+    "test": "../../node_modules/.bin/jest"
   },
   "keywords": [
     "ionic",
@@ -35,24 +33,10 @@
   "bugs": {
     "url": "https://github.com/driftyco/ionic-cli/issues"
   },
-  "license": "MIT",
-  "dependencies": {
-    "archiver": "^1.3.0",
-    "chalk": "^1.1.3",
-    "cross-spawn": "^4.0.2",
-    "inquirer": "^1.2.2",
-    "leek": "0.0.24",
-    "minimist": "^1.2.0",
-    "ncp": "^2.0.0",
-    "os-name": "^2.0.1",
-    "progress": "^1.1.8",
-    "rimraf": "^2.5.4",
-    "superagent": "^3.5.2",
-    "uuid": "^3.0.1"
-  },
   "files": [
     "dist/"
   ],
+  "license": "MIT",
   "jest": {
     "moduleFileExtensions": [
       "ts",
@@ -64,14 +48,8 @@
     "testRegex": "/__tests__/.*\\.(ts|js)$",
     "testResultsProcessor": "<rootDir>/../../node_modules/ts-jest/coverageprocessor.js"
   },
-  "devDependencies": {
-    "@types/chalk": "^0.4.31",
-    "@types/inquirer": "0.0.32",
-    "@types/lodash": "^4.14.58",
-    "@types/minimist": "^1.2.0",
-    "@types/ncp": "^2.0.0",
-    "@types/progress": "^1.1.28",
-    "@types/rimraf": "0.0.28",
-    "@types/uuid": "^2.0.29"
+  "dependencies": {
+    "@ionic/cli-utils": "^0.0.9",
+    "superagent-proxy": "^1.0.2"
   }
 }
