--- a/packages/cli-plugin-proxy/tsconfig.json
+++ b/packages/cli-plugin-proxy/tsconfig.json
@@ -10,20 +10,13 @@
     "noImplicitAny": true,
     "outDir": "./dist",
     "strictNullChecks": true,
-    "target": "es6",
-    "lib": [
-      "es2017.object",
-      "es2016",
-      "dom"
-    ]
+    "target": "es6"
   },
   "include": [
     "../../types/archiver.d.ts",
-    "../../types/proxy-middleware.d.ts",
-    "../../types/glob-watcher.d.ts",
-    "../../types/tiny-lr.d.ts",
     "../../types/cross-spawn.d.ts",
     "../../types/superagent.d.ts",
+    "../../types/superagent-proxy.d.ts",
     "../../types/leek.d.ts",
     "../../types/os-name.d.ts",
     "src/**/*.ts"
