--- a/packages/cli-plugin-ionic-angular/package.json
+++ b/packages/cli-plugin-ionic-angular/package.json
@@ -39,8 +39,7 @@
   "dependencies": {
     "@ionic/cli-utils": "^0.0.9",
     "chalk": "^1.1.3",
-    "inquirer": "^3.0.6",
-    "semver": "^5.3.0"
+    "inquirer": "^3.0.6"
   },
   "devDependencies": {
     "@angular/compiler": "^4.0.0",
@@ -49,7 +48,6 @@
     "@types/chalk": "^0.4.31",
     "@types/clean-css": "^3.4.30",
     "@types/inquirer": "0.0.32",
-    "@types/semver": "^5.3.31",
     "rxjs": "^5.2.0"
   },
   "peerDependencies": {
