--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -36,6 +36,9 @@
     "url": "https://github.com/driftyco/ionic-cli/issues"
   },
   "license": "MIT",
+  "files": [
+    "dist/"
+  ],
   "dependencies": {
     "archiver": "^1.3.0",
     "chalk": "^1.1.3",
@@ -50,9 +53,19 @@
     "superagent": "^3.5.2",
     "uuid": "^3.0.1"
   },
-  "files": [
-    "dist/"
-  ],
+  "devDependencies": {
+    "@types/chalk": "^0.4.31",
+    "@types/inquirer": "0.0.32",
+    "@types/lodash": "^4.14.58",
+    "@types/minimist": "^1.2.0",
+    "@types/ncp": "^2.0.0",
+    "@types/progress": "^1.1.28",
+    "@types/rimraf": "0.0.28",
+    "@types/uuid": "^2.0.29"
+  },
+  "peerDependencies": {
+    "strip-ansi": "^3.0.1"
+  },
   "jest": {
     "moduleFileExtensions": [
       "ts",
@@ -63,15 +76,5 @@
     },
     "testRegex": "/__tests__/.*\\.(ts|js)$",
     "testResultsProcessor": "<rootDir>/../../node_modules/ts-jest/coverageprocessor.js"
-  },
-  "devDependencies": {
-    "@types/chalk": "^0.4.31",
-    "@types/inquirer": "0.0.32",
-    "@types/lodash": "^4.14.58",
-    "@types/minimist": "^1.2.0",
-    "@types/ncp": "^2.0.0",
-    "@types/progress": "^1.1.28",
-    "@types/rimraf": "0.0.28",
-    "@types/uuid": "^2.0.29"
   }
 }
