--- a/packages/cli-plugin-ionic1/tsconfig.json
+++ b/packages/cli-plugin-ionic1/tsconfig.json
@@ -23,6 +23,7 @@
     "../../types/glob-watcher.d.ts",
     "../../types/tiny-lr.d.ts",
     "../../types/cross-spawn.d.ts",
+    "../../types/slice-ansi.d.ts",
     "../../types/superagent.d.ts",
     "../../types/leek.d.ts",
     "../../types/os-name.d.ts",
