--- a/packages/cli-plugin-proxy/tsconfig.json
+++ b/packages/cli-plugin-proxy/tsconfig.json
@@ -15,6 +15,7 @@
   "include": [
     "../../types/archiver.d.ts",
     "../../types/cross-spawn.d.ts",
+    "../../types/slice-ansi.d.ts",
     "../../types/superagent.d.ts",
     "../../types/superagent-proxy.d.ts",
     "../../types/leek.d.ts",
