--- a/packages/cli-utils/tsconfig.json
+++ b/packages/cli-utils/tsconfig.json
@@ -23,6 +23,7 @@
   "include": [
     "../../types/archiver.d.ts",
     "../../types/cross-spawn.d.ts",
+    "../../types/slice-ansi.d.ts",
     "../../types/superagent.d.ts",
     "../../types/strip-ansi.d.ts",
     "../../types/leek.d.ts",
