--- a/packages/ionic/tsconfig.json
+++ b/packages/ionic/tsconfig.json
@@ -18,6 +18,7 @@
   "include": [
     "../../types/archiver.d.ts",
     "../../types/cross-spawn.d.ts",
+    "../../types/slice-ansi.d.ts",
     "../../types/superagent.d.ts",
     "../../types/qrcode-terminal.d.ts",
     "../../types/leek.d.ts",
