--- a/packages/cli-plugin-ionic1/tsconfig.json
+++ b/packages/cli-plugin-ionic1/tsconfig.json
@@ -24,6 +24,7 @@
     "../../types/tiny-lr.d.ts",
     "../../types/cross-spawn.d.ts",
     "../../types/slice-ansi.d.ts",
+    "../../types/string-width.d.ts",
     "../../types/superagent.d.ts",
     "../../types/leek.d.ts",
     "../../types/os-name.d.ts",
