--- a/packages/cli-plugin-proxy/tsconfig.json
+++ b/packages/cli-plugin-proxy/tsconfig.json
@@ -16,6 +16,7 @@
     "../../types/archiver.d.ts",
     "../../types/cross-spawn.d.ts",
     "../../types/slice-ansi.d.ts",
+    "../../types/string-width.d.ts",
     "../../types/superagent.d.ts",
     "../../types/superagent-proxy.d.ts",
     "../../types/leek.d.ts",
