--- a/packages/cli-utils/tsconfig.json
+++ b/packages/cli-utils/tsconfig.json
@@ -24,6 +24,7 @@
     "../../types/archiver.d.ts",
     "../../types/cross-spawn.d.ts",
     "../../types/slice-ansi.d.ts",
+    "../../types/string-width.d.ts",
     "../../types/superagent.d.ts",
     "../../types/strip-ansi.d.ts",
     "../../types/leek.d.ts",
