chore(): build automatically w/ prepublish

--- a/packages/cli-plugin-proxy/package.json
+++ b/packages/cli-plugin-proxy/package.json
@@ -10,6 +10,7 @@
     "lint": "../../node_modules/.bin/tslint -c ../../tslint.json 'src/**/*.ts'",
     "build": "npm run clean && ../../node_modules/.bin/tsc",
     "clean": "rm -rf ./dist",
+    "prepublish": "npm run build",
     "test": "../../node_modules/.bin/jest",
     "watch": "npm run clean && ../../node_modules/.bin/tsc --watch"
   },
