--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -11,6 +11,7 @@
     "build": "npm run clean && ../../node_modules/.bin/tsc",
     "clean": "rm -rf ./dist",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
+    "prepublish": "npm run build",
     "test": "../../node_modules/.bin/jest",
     "watch": "npm run clean && ../../node_modules/.bin/tsc --watch"
   },
