--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "watch": "lerna run watch --no-sort --stream"
+    "build": "tsc",
+    "docs": "node ./scripts/createMarkdownDocs.js ionic && node ./scripts/createMarkdownDocs.js cli-plugin-cordova"
   },
   "devDependencies": {
     "@types/node": "^6.0.68",
