--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jest": "^19.0.2",
     "jest-cli": "^19.0.2",
     "lerna": "2.0.0-beta.38",
+    "replace": "^0.3.0",
     "ts-jest": "^19.0.7",
     "tslint": "^4.0.0-dev.0",
     "tslint-ionic-rules": "^0.0.8",
