--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -19,7 +19,8 @@
     "clean": "rm -rf ./dist",
     "changelog": "../../node_modules/.bin/conventional-changelog -i CHANGELOG.md -s -p angular",
     "test": "../../node_modules/.bin/jest",
-    "prepublish": "npm run build",
+    "prepublish": "npm run build && npm run version",
+    "version": "node ../../scripts/versionPackage.js ionic",
     "globallink": "npm link"
   },
   "files": [
