chore(): build scripts for ci

--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,7 @@ machine:
 
 dependencies:
   post:
+    - npm run build
     - cd packages/cli-utils && npm install && npm run build
     - cd packages/cli-plugin-ionic-angular && npm install @ionic/app-scripts
     - ./node_modules/.bin/lerna bootstrap
