chore(): remove ts comments

--- a/packages/cli-plugin-ionic-angular/tsconfig.json
+++ b/packages/cli-plugin-ionic-angular/tsconfig.json
@@ -9,12 +9,11 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
+    "removeComments": true,
     "strictNullChecks": false,
     "target": "es6",
     "lib": [
-      "es2017.object",
-      "es2016",
-      "dom"
+      "es2016"
     ]
   },
   "include": [
