--- a/packages/cli-plugin-proxy/tsconfig.json
+++ b/packages/cli-plugin-proxy/tsconfig.json
@@ -9,8 +9,12 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
+    "removeComments": true,
     "strictNullChecks": true,
-    "target": "es6"
+    "target": "es6",
+    "lib": [
+      "es2016"
+    ]
   },
   "include": [
     "../../types/archiver.d.ts",
