--- a/packages/cli-utils/tsconfig.json
+++ b/packages/cli-utils/tsconfig.json
@@ -9,15 +9,14 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
+    "removeComments": true,
     "strictNullChecks": true,
     "target": "es6",
     "typeRoots": [
       "../../node_modules/@types"
     ],
     "lib": [
-      "es2017.object",
-      "es2016",
-      "dom"
+      "es2016"
     ]
   },
   "include": [
