--- a/packages/cli-plugin-ionic-angular/package.json
+++ b/packages/cli-plugin-ionic-angular/package.json
@@ -10,8 +10,8 @@
     "build": "npm run clean && ../../node_modules/.bin/tsc",
     "clean": "rm -rf ./dist",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
-    "prepublish": "npm run build && npm run version",
-    "version": "node ../../scripts/versionPackage.js cli-plugin-ionic-angular",
+    "prepublish": "npm run build && npm run prepublish-script",
+    "prepublish-script": "node ../../scripts/prepublish.js cli-plugin-ionic-angular",
     "test": "../../node_modules/.bin/jest",
     "watch": "npm run clean && ../../node_modules/.bin/tsc --watch"
   },
