--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -11,8 +11,8 @@
     "build": "npm run clean && ../../node_modules/.bin/tsc",
     "clean": "rm -rf ./dist",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
-    "prepublish": "npm run build && npm run version",
-    "version": "node ../../scripts/versionPackage.js cli-utils",
+    "prepublish": "npm run build && npm run prepublish-script",
+    "prepublish-script": "node ../../scripts/prepublish.js cli-utils",
     "test": "../../node_modules/.bin/jest",
     "watch": "npm run clean && ../../node_modules/.bin/tsc --watch"
   },
