--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "build": "tsc",
+    "watch": "tsc -w",
     "docs": "node ./scripts/createMarkdownDocs.js ionic && node ./scripts/createMarkdownDocs.js cli-plugin-cordova",
     "publish:canary": "lerna publish --canary --exact --npm-tag canary",
     "publish:beta": "lerna publish --npm-tag beta"
@@ -9,6 +10,8 @@
   "devDependencies": {
     "@types/node": "^6.0.68",
     "awesome-typescript-loader": "^3.1.2",
+    "chokidar-cli": "^1.2.0",
+    "concurrently": "^3.4.0",
     "coveralls": "^2.2.0",
     "eslint-config-ionic": "0.0.2",
     "jest": "^19.0.2",
