--- a/packages/cli-plugin-ionic-angular/package.json
+++ b/packages/cli-plugin-ionic-angular/package.json
@@ -43,8 +43,7 @@
   },
   "dependencies": {
     "@ionic/cli-utils": "1.0.0-beta0",
-    "chalk": "^1.1.3",
-    "inquirer": "^3.0.6"
+    "chalk": "^1.1.3"
   },
   "devDependencies": {
     "@angular/compiler": "^4.0.0",
@@ -52,7 +51,6 @@
     "@angular/core": "^4.0.0",
     "@types/chalk": "^0.4.31",
     "@types/clean-css": "^3.4.30",
-    "@types/inquirer": "0.0.32",
     "rxjs": "^5.2.0"
   },
   "peerDependencies": {
