chore(): upgrade typescript to 2.3.1

--- a/packages/cli-plugin-ionic-angular/tsconfig.json
+++ b/packages/cli-plugin-ionic-angular/tsconfig.json
@@ -7,9 +7,9 @@
     "experimentalDecorators": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "noImplicitAny": true,
     "outDir": "./dist",
     "removeComments": true,
+    "strict": true,
     "strictNullChecks": false,
     "target": "es6",
     "lib": [
