--- a/packages/cli-utils/tsconfig.json
+++ b/packages/cli-utils/tsconfig.json
@@ -7,10 +7,9 @@
     "experimentalDecorators": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "noImplicitAny": true,
     "outDir": "./dist",
     "removeComments": true,
-    "strictNullChecks": true,
+    "strict": true,
     "target": "es6",
     "typeRoots": [
       "../../node_modules/@types"
