chore(scripts): publish task for RC

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "docs": "node ./scripts/createMarkdownDocs.js ionic && node ./scripts/createMarkdownDocs.js cli-plugin-cordova",
     "publish:canary": "lerna publish --canary --exact --npm-tag canary",
     "publish:beta": "lerna publish --exact --npm-tag beta",
+    "publish:rc": "lerna publish --exact --npm-tag rc",
     "publish:ci": "npm run publish:canary -- --yes",
     "prepush": "npm run lint"
   },
