--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ionic/cli-utils",
-  "version": "1.0.0-beta1",
+  "version": "1.0.0-rc.0",
   "description": "Ionic CLI Utils",
   "homepage": "https://ionic.io/",
   "author": "Ionic Team <hi@ionic.io> (http://ionic.io)",
